Mar 18, 2022
  CurationDafGenerator -- note_type fixed to be 'disease_note' instead of 'comment'

Mar 17, 2022
  CurationDafGenerator -- added annotations with OMIM:PS mappings

Mar 16, 2022
  added CurationDafGenerator -- generates daf file for HUMAN, gene-disease annotations

Feb 16, 2022
  added module VariantVcfGenerator, to produce VCF file with high throughput variants for rn7 assembly in VCF format