@@ -1,6 +1,7 @@
 Mar 18, 2022
   CurationDafGenerator -- note_type fixed to be 'disease_note' instead of 'comment'
-
+  CurationDafGenerator -- added generation of disease_agm_ingest_set and disease_allele_ingest_set
+  
 Mar 17, 2022
   CurationDafGenerator -- added annotations with OMIM:PS mappings
 
